LITT Changelog:
===============

 * 2019-09-03: ANSI now uses 0m as default color instead of 30m. (Removed last TODO:s)
 * 2019-09-03: Improvements in author/genre virtual columns.
               * Takes books with stories into account so authors don't get genres counted for
                 other authors genres. Affected agc, agcp and gac.
               * Added agg and aggp for listing all genres (and with pseudonyms) for an author.
 * 2019-09-02: Now checks the ISBN when adding books. Has the option to accept invalid ones.
 * 2019-09-02: Generalized the br* listings, can now count authors, genres, stories, sources 
               and categories as well. This was done by extending the --cnt option values.
               Note that these new option values will not work with the *bc* listings and do not
               make sense for them either.
 * 2019-09-02: Improved story listings. Now avoids duplicates by default.
               * Use stng instead of bstng by default in stt listing. (Really no need for
                 bstng so far, it will only differ from stng if a story has different authors
                 in different books)
               * Link Stories using storyBooks or storyAuthors instead of bookStories unless both
                 are needed; that way we avoid duplicate rows for stories with multiple authors.
 * 2019-09-01: Change sort for bb so that it sorts by story (id) before author name.
 * 2019-08-30: Added virtual count columns for pseudonyms:
               * abcp - As abc with pseudonyms included for MainID
               * agcp - As agc with pseudonyms included for MainID
 * 2019-08-29: Now uses a switch for the action selection with constexpr action hashing!
               Code size decreased 12.5KB (VS2019) and should be faster too hopefully! 
               Smaller decrease on VS2017, less than 1KB, but was smaller already.
 * 2019-08-29: No need for m_endOfOption after last change!